cmake_minimum_required ( VERSION 2.8.11 )
project ( host-modules)

set ( HOST_MODULES_INCLUDES 
    "${MOAI_ROOT}/src/"
    "${MOAI_ROOT}/src/config-default/"
    )

  # Use all cpp files in directory as source code
  set (HOST_MODULES_SRC "${MOAI_ROOT}/src/host-modules/*.cpp" )

  include_directories ( ${MOAI_MODULES_INCLUDES} )

  add_library ( host-modules STATIC ${HOST_MODULES_SRC} )

  
#BOX2D

  if ( MOAI_BOX2D )
    set ( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DAKU_WITH_BOX2D=1 -DMOAI_WITH_BOX2D=1"  PARENT_SCOPE )
    set ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DAKU_WITH_BOX2D=1 -DMOAI_WITH_BOX2D=1"  PARENT_SCOPE)
    target_link_libraries ( host-modules moai-box2d )
  else ( MOAI_BOX2D )
    set ( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DAKU_WITH_BOX2D=0 -DMOAI_WITH_BOX2D=0"   PARENT_SCOPE)
    set ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DAKU_WITH_BOX2D=0 -DMOAI_WITH_BOX2D=0"  PARENT_SCOPE)
  endif ( MOAI_BOX2D )

#UNTZ
if ( MOAI_UNTZ )
  set ( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DAKU_WITH_UNTZ=1 -DMOAI_WITH_UNTZ=0" PARENT_SCOPE )
  set ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DAKU_WITH_UNTZ=1 -DMOAI_WITH_UNTZ=0" PARENT_SCOPE )
  target_link_libraries ( host-modules moai-untz)
else ( MOAI_UNTZ )
  set ( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DAKU_WITH_UNTZ=0 -DMOAI_WITH_UNTZ=0" PARENT_SCOPE )
  set ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DAKU_WITH_UNTZ=0 -DMOAI_WITH_UNTZ=0" PARENT_SCOPE )

endif ( MOAI_UNTZ )

#Chipmunk
if ( MOAI_CHIPMUNK )
    set ( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DAKU_WITH_CHIPMUNK=1"  PARENT_SCOPE )
    set ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DAKU_WITH_CHIPMUNK=1"  PARENT_SCOPE )
    set ( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DMOAI_WITH_CHIPMUNK=1" PARENT_SCOPE)
    set ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DMOAI_WITH_CHIPMUNK=1" PARENT_SCOPE)

    else ( MOAI_CHIPMUNK )
    set ( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DAKU_WITH_CHIPMUNK=0"  PARENT_SCOPE )
    set ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DAKU_WITH_CHIPMUNK=0"  PARENT_SCOPE )
    set ( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DMOAI_WITH_CHIPMUNK=0" PARENT_SCOPE)
    set ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DMOAI_WITH_CHIPMUNK=0" PARENT_SCOPE)

endif ( MOAI_CHIPMUNK )